--- a/templates/Login.html
+++ b/templates/Login.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
-<html>
 {% load static %}
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Login</title>
+        <link rel="stylesheet" href="{% static 'assets/css/login-css.css'  %}">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Login</title>
-    <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/styles.min.css' %}">
-</head>
+    </head>
+    <body>
 
-<body>
-    <div class="body" style="padding-top: 150px;">
-        <div class="border rounded shadow login-center">
-            <form style="padding-top: 32px;" method="post">
-                {%csrf_token%}
-                <div class="form-group text-center"><img class="img-fluid" style="width: 100px;" src="{% static 'assets/img/default.png' %}"></div>
-                <div class="form-group d-flex justify-content-center"><input class="form-control" type="text" style="width: 200px;" placeholder="Username" name="username"></div>
-                <div class="form-group d-flex justify-content-center"><input class="form-control" type="password" style="width: 200px;" placeholder="Password" name="password"></div>
-                <div class="form-group d-flex justify-content-center"><button class="btn btn-dark" style="width: 200px;" type="submit">Login</button></div>
-            </form>
+        <div class="login-box">
+            <img src="{% static 'assets/img/avatar-default-icon.png' %}" class="avatar">
+                <h1>LOGIN</h1>
+                <form method="post">
+                    {% csrf_token %}
+                    <p>Username</p>
+                    <input class="abc" type="text" name="Username" placeholder="Enter Username">
+                    <p>Password</p>
+                    <input class="abc" type="password" name="Password" placeholder="Enter Password"><br>
+                    <input class="abc" type="submit" name="" value="Login"><br>
+                    <input class="checkbox" type="checkbox" id="remember-me" name="remember" value="Yes">
+                    <label class="checkbox" for="remember-me"> Remember me</label><br>
+                    <a href="#">Forgot password? </a><br>
+                    <a href="{% url 'Canhost:signup' %}">Don't have an account? Sign Up</a>
+
+                </form>
         </div>
-    </div>
-    <script src="{% static 'assets/js/jquery.min.js'%} "></script>
-    <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script>
-</body>
 
+    </body>
 </html>
+
+
