--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                             <span class="f-word" data-hover="Regis" >Regis</span>
                             <span class="s-word" data-hover="tration" >tration</span>
                         </span></a></li>
-                <li><a href="{% url 'Canhost:student_login' %}"><span class="menu">
+                <li><a href="{% url 'Canhost:login' %}"><span class="menu">
                             <span class="f-word" data-hover="Log" >Log</span>
                             <span class="s-word" data-hover="In" >in</span>
                         </span></a></li>
