added logo to frontend

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{% static 'assets/css/navbar-center-Joce.css' %} ">
     <link rel="stylesheet" href="{% static 'assets/css/Navbar-with-menu-and-login.css' %} ">
     <link rel="stylesheet" href="{% static 'assets/css/styles.css'%} ">
+    <link rel="icon" href="{% static '../static/assets/img/cec-logo.jpg' %}">
 
     <!-- bootstrap-scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
