--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Signup</title>
+    <link rel="icon" href="{% static '../static/assets/img/cec-logo.jpg' %}">
 </head>
 <body>
 <center><h3>Signup</h3></center>
