--- a/templates/Login.html
+++ b/templates/Login.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Login</title>
+        <link rel="icon" href="{% static '../static/assets/img/cec-logo.jpg' %}">
         <link rel="stylesheet" href="{% static 'assets/css/login-css.css'  %}">
 
     </head>
