--- a/templates/warden_home.html
+++ b/templates/warden_home.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Warden Home</title>
+    <link rel="icon" href="{% static '../static/assets/img/cec-logo.jpg' %}">
    <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
 </head>
 <body>
